--- a/static/styles/homepage/partner.scss
+++ b/static/styles/homepage/partner.scss
@@ -1,14 +1,65 @@
-.partners{
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: 1fr;
-	grid-gap: var(--space-md);
+@import '../lib/colors';
+@import './layouts';
+
+hgroup {
+    text-align: center;
+    font-weight: bold;
+    margin: 60px 0 60px;
+    width: 100%;
 }
-.partner{
-	border-radius: var(--radius-md);
-	border: var(--border-width) solid var(--color-gray);
-	width: 100%;
-	height: 100%;
-	padding: var(--space-md);
-	object-fit: contain;
+
+.section-title {
+    width: 100%;
+    line-height: 1.75rem;
+    h4 {
+        color: $primaryColor;
+        margin-bottom: 0;
+        margin-right: 20px;
+        font-weight: 700;
+    }
+}
+
+.section-partner {
+    ul {
+        color: $primaryColor;
+        padding-left: 20px;
+    }
+    .container {
+        margin-left: 0;
+    }
+    .intro-box {
+        padding: 0;
+    }
+    .partner-box-wrapper {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    .partner-box {
+		border-radius: var(--radius-sm);
+		background: #fff;
+        border: 1px solid lightgray;
+        height: 150px;
+        text-align: center;
+    }
+    .partner-box img {
+        max-height: 100%;
+        /* Vertical Center */
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    .collapse.collapse.in {
+        display: flex !important;
+    }
+    .toggle-partner {
+        position: relative;
+        i {
+            display: block;
+            pointer-events: none;
+        }
+    }
+    .buttonWrapper {
+        width: 100%;
+        text-align: center;
+    }
 }
