--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -1,7 +1,7 @@
-{{#extend "lib/default"}}
+{{#extend "lib/loggedout"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/homepage/styles.css"/>
+        <link rel="stylesheet" href="/styles/homepage/index.css"/>
         <link rel="stylesheet" href="/vendor/introjs/introjs.min.css" />
     {{/content}}
 
@@ -14,8 +14,7 @@
         <script type="text/javascript" src="/vendor/mailchimp.js" data-dojo-config="usePlainJson: true, isDebug: false" defer></script>
     {{/content}}
 
-    {{#content "body"}}
-        {{#embed "lib/header"}}{{/embed}}
+    {{#content "page"}}
 
 		{{#embed "authentication/section" class="rows-2"}}
 			{{#content "body"}}
@@ -58,31 +57,6 @@
 						"slides": []
 					}'>
 				</video-player>
-				{{!--
-				<video-player
-					configuration='{
-						"streams" : [
-							{
-							"hd" : "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/explainer2018/hd/video.mp4",
-							"sd" : "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/explainer2018/sd/video.mp4",
-							"poster": "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/explainer2018/explainer-poster.jpg",
-							"hls": "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/explainer2018/hls/video.m3u8"
-							}
-						],
-						"language": "de",
-						"theme" : "dark-red",
-						"initialState": {
-							"volume": 0.75,
-							"quality" : "hls",
-							"playbackRate" : 1.0
-						},
-						"videoPreload": false,
-						"userPreferences" : {
-						},
-						"slides": []
-					}'>
-				</video-player>
-				--}}
 			{{/content}}
 		{{/embed}}
 
@@ -116,8 +90,33 @@
 
 		{{#embed "authentication/section" class="content-width-max"}}
 			{{#content "body"}}
+				{{!--
 				<h2 class="section-title center">Was bietet die HPI Schul-Cloud für:</h2>
 				<p>TODO embed tabs</p>
+				--}}
+				<video-player
+					configuration='{
+						"streams" : [
+							{
+							"hd" : "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/explainer2018/hd/video.mp4",
+							"sd" : "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/explainer2018/sd/video.mp4",
+							"poster": "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/explainer2018/explainer-poster.jpg",
+							"hls": "https://www10-fms.hpi.uni-potsdam.de/vod/media/SCHUL-CLOUD/explainer2018/hls/video.m3u8"
+							}
+						],
+						"language": "de",
+						"theme" : "dark-red",
+						"initialState": {
+							"volume": 0.75,
+							"quality" : "hls",
+							"playbackRate" : 1.0
+						},
+						"videoPreload": false,
+						"userPreferences" : {
+						},
+						"slides": []
+					}'>
+				</video-player>
 			{{/content}}
 		{{/embed}}
 
@@ -184,12 +183,6 @@
 					</a>
 				</div>
 			</div>
-			{{/content}}
-		{{/embed}}
-
-		{{#embed "authentication/section" style="dark footer" class=""}}
-			{{#content "body"}}
-				{{> "lib/extended_footer"}}
 			{{/content}}
 		{{/embed}}
 
