--- a/views/partner/partner_guests.hbs
+++ b/views/partner/partner_guests.hbs
@@ -1,36 +1,15 @@
-{{#extend "lib/default"}}
+{{#extend "lib/loggedout"}}
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/partners.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/partner/partner.css"/>
-        <link rel="stylesheet" href="/styles/authentication/home.css"/>
-        <style>
-            body {
-                background: #e6e2e2;
-            }
-            .partner-box {
-                background: white;
-            }
-            header a[href='/partner']{
-                background-color: #f8a41b;
-            }
-        </style>
+        <link rel="stylesheet" href="/styles/homepage/partner.css"/>
     {{/content}}
 
-    {{#content "body"}}
-        {{#embed "lib/header"}}{{/embed}}
-        <div class="container">
-            <div class="card">
-                <div class="card-block">
-                    <div class="section-title"><h3>Partner</h3></div>
-                    {{#embed "partner/partner"}}{{/embed}}
-                </div>
-            </div>
-        </div>
-        {{#embed "lib/extended_footer"}}{{/embed}}
+    {{#content "page"}}
+		{{#embed "partner/partner"}}{{/embed}}
     {{/content}}
 
 {{/extend}}
