--- a/views/partner/partner_loggedin.hbs
+++ b/views/partner/partner_loggedin.hbs
@@ -5,11 +5,11 @@
     {{/content}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/partner/partner.css"/>
+        <link rel="stylesheet" href="/styles/homepage/partner.css"/>
     {{/content}}
 
     {{#content "page"}}
-        {{#embed "partner/partner"}}{{/embed}}
+        {{#embed "partner/partner" loggedin="true"}}{{/embed}}
     {{/content}}
 
 {{/extend}}
