--- a/views/team/team_guest.hbs
+++ b/views/team/team_guest.hbs
@@ -1,13 +1,7 @@
-{{#extend "lib/default"}}
+{{#extend "lib/loggedout"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/authentication/home.css"/>
-        <link rel="stylesheet" href="/styles/team/team.css"/>
-        <style>
-            header a[href='/team']{
-                background-color: #f8a41b;
-            }
-        </style>
+        <link rel="stylesheet" href="/styles/homepage/team.css"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
@@ -15,16 +9,12 @@
         <script type="text/javascript" src="/vendor/vanilla-tilt.min.js" defer></script>
     {{/content}}
 
-    {{#content "body"}}
-        {{#embed "lib/header"}}{{/embed}}
+    {{#content "page"}}
         <div class="container">
-            <div class="card">
-                <div class="card-block">
-                    <div class="section-title"><h3>{{title}}</h3></div>
-                    {{#embed "team/team"}}{{/embed}}
-                </div>
-            </div>
+			<div class="section-title">
+				<h3>{{title}}</h3>
+			</div>
+			{{#embed "team/team"}}{{/embed}}
         </div>
-        {{#embed "lib/extended_footer"}}{{/embed}}
     {{/content}}
 {{/extend}}
