WIP some small bugfixes

--- a/static/styles/homepage/homepage.scss
+++ b/static/styles/homepage/homepage.scss
@@ -2,3 +2,13 @@
 @import "./layouts";
 @import "./header";
 @import "./sections";
+
+body {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	min-height: 100vh;
+}
+main{
+	flex: 1;
+}
