--- a/views/lib/loggedout.hbs
+++ b/views/lib/loggedout.hbs
@@ -10,7 +10,9 @@
     {{#content "body"}}
 		{{> "lib/header"}}
 
-		{{#block "page"}}{{/block}}
+		<main>
+			{{#block "page"}}{{/block}}
+		</main>
 
 		{{> "lib/extended_footer"}}
     {{/content}}
