more pages redesigned

--- a/static/styles/about/about.scss
+++ b/static/styles/about/about.scss
@@ -30,12 +30,16 @@
     margin: 0 15px 15px;
     padding: 3px 6px 3px 6px;
     border: 1px solid #d3d3d3;
-    box-shadow: 2px 2px 5px rgba(0,0,0,.1);
+	box-shadow: 2px 2px 5px rgba(0,0,0,.1);
+	background-color: #fff;
     &.opened {
       border: 1px solid #b10438;
     }
     a {
-      text-decoration: none;
+		.single-pdf-title{
+			color: initial;
+			text-decoration: none;
+		}
 
       .single-pdf-wrapper {
         padding: 10px;
@@ -67,7 +71,7 @@
       padding: 10px;
       height: 100%;
       a {
-        text-decoration: none; 
+        text-decoration: none;
         .single-award-thumbnail {
           margin-top: 10px;
           width: 100%;
