--- a/views/imprint/imprint_logged_in.hbs
+++ b/views/imprint/imprint_logged_in.hbs
@@ -5,7 +5,7 @@
     {{/content}}
 
     {{#content "page"}}
-        {{#embed "imprint/imprint"}}{{/embed}}
+        {{#embed "imprint/imprint" loggedin="true"}}{{/embed}}
     {{/content}}
 
     {{#content "scripts" mode="append"}}
