--- a/views/about/about_loggedin.hbs
+++ b/views/about/about_loggedin.hbs
@@ -1,16 +1,16 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
     {{#content "styles" mode="append"}}
-         <link rel="stylesheet" href="/styles/partner/partner.css"/>
+         <link rel="stylesheet" href="/styles/homepage/partner.css"/>
          <link rel="stylesheet" href="/styles/about/about.css"/>
-    {{/content}}
-
-    {{#content "page"}}
-        {{#embed "about/about" loggedin="true"}}{{/embed}}
     {{/content}}
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/video-player/load-video-player.js" type="text/javascript" defer></script>
         <script src="/scripts/about.js" type="text/javascript" defer></script>
+    {{/content}}
+
+    {{#content "page"}}
+        {{#embed "about/about" loggedin="true"}}{{/embed}}
     {{/content}}
 {{/extend}}
