--- a/views/imprint/imprint_guests.hbs
+++ b/views/imprint/imprint_guests.hbs
@@ -1,25 +1,12 @@
-{{#extend "lib/default"}}
+{{#extend "lib/loggedout"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/authentication/home.css"/>
         <link rel="stylesheet" href="/styles/imprint/imprint.css"/>
-        <style>
-            body {
-                background: #e6e2e2;
-            }
-        </style>
     {{/content}}
 
     {{#content "body"}}
         {{#embed "lib/header"}}{{/embed}}
-        <div class="container">
-            <div class="card">
-                <div class="card-block">
-                    <div class="section-title"><h4>Impressum</h4></div>
-                    {{#embed "imprint/imprint"}}{{/embed}}
-                </div>
-            </div>
-        </div>
+			{{#embed "imprint/imprint"}}{{/embed}}
         {{#embed "lib/extended_footer"}}{{/embed}}
     {{/content}}
 
