--- a/views/authentication/blog-card.hbs
+++ b/views/authentication/blog-card.hbs
@@ -1,13 +1,14 @@
 <article class="blog-card">
-		<img class="thumbnail" alt="{{article.img.title}}" src="{{article.img.src}}">
+	<img class="thumbnail" alt="{{article.img.title}}" src="{{article.img.src}}">
+	<div class="body">
 	<h2 class="title">
 		{{article.title}}
 		<br/>
 		<small class="pub-date">{{article.pubDate}}</small>
 	</h2>
 	<p class="description">{{truncatePure (stripHTMLTags article.description) 200}}</p>
-	<p>{{article.author}}</p>
 	<a href="{{article.url}}" class="btn-read" target="_blank">
-		lesen
+		Artikel öffnen <i class="fa  fa-angle-double-right" aria-hidden="true"></i>
 	</a>
+	</div>
 </article>
