--- a/static/styles/homepage/index.scss
+++ b/static/styles/homepage/index.scss
@@ -2,6 +2,21 @@
 @import "./blog-card";
 @import "./login";
 
+.demo-login{
+	text-align: center;
+	.form-demo-login{
+		display: inline-block;
+		&:not(:first-of-type){
+			margin-left: var(--space-md);
+		}
+	}
+	.btn-primary.btn-outline{
+		border: 1px solid var(--color-primary);
+		color: var(--color-primary);
+		background: transparent;
+	}
+}
+
 .section a.btn.btn-newsletter{
 	display: inline-block;
 	border: 1px solid var(--color-white);
