--- a/views/about/about_loggedin.hbs
+++ b/views/about/about_loggedin.hbs
@@ -1,7 +1,7 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
     {{#content "styles" mode="append"}}
-         <link rel="stylesheet" href="/styles/homepage/partner.css"/>
+         <link rel="stylesheet" href="/styles/partner/partner.css"/>
          <link rel="stylesheet" href="/styles/about/about.css"/>
     {{/content}}
 
