--- a/views/partner/partner_loggedin.hbs
+++ b/views/partner/partner_loggedin.hbs
@@ -5,7 +5,7 @@
     {{/content}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/homepage/partner.css"/>
+        <link rel="stylesheet" href="/styles/partner/partner.css"/>
     {{/content}}
 
     {{#content "page"}}
