--- a/views/team/team_guest.hbs
+++ b/views/team/team_guest.hbs
@@ -1,7 +1,7 @@
 {{#extend "lib/loggedout"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/homepage/team.css"/>
+        <link rel="stylesheet" href="/styles/team/team.css"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
