--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -1,71 +1,74 @@
 {{#embed "authentication/section"}}
-	{{#content "body"}}
-		<div class="section-title">
-			<h2>{{title}}</h2>
-		</div>
-		<section class="section-team">
-			<div id="teamLength" class="hidden">
-				{{teamLength}}
-			</div>
-			{{#each teams as |currentteam index|}}
-			<h4>{{name}}</h4>
-			<div class="container">
-				<div class="row">
-					{{#each currentteam.team}}
-					{{#if subheader_before}}<h5>{{subheader_before}}</h5>{{/if}}
-					<div id="modal-container-personcard">
-						<div class="modal-background {{#if ../../loggedin}}modal-padding{{/if}}">
-							<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-								<div class="modal-dialog" style="margin-top: {{#if longDesc}} {{ longDesc }} {{else}} 20vh {{/if}}" role="document">
-									<div class="modal-content">
-										<div class="modal-header">
-											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-												<i class="fa fa-times" aria-hidden="true"></i>
-											</button>
-										</div>
-										<div class="modal-body">
-											<div class="row">
-												<div class="col-md-5">
-													<div data-tilt data-tilt-glare data-tilt-max-glare="0.8">
-														<img class="image" src="{{pictureUrl}}">
-													</div>
-												</div>
-												<div class="col-md-7">
-													<h2 class="person-title" data-lastname="{{lastName}}" style="text-align: left">{{title}} {{firstName}} {{lastName}}</h2>
-													<h5 class="person-desc" style="text-align: left">{{position}}</h5>
-													<p style="text-align: left">{{{description}}}</p>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+    {{#content "body"}}
+        <div class="section-title">
+            <h2>{{title}}</h2>
+        </div>
+        <section class="section-team">
+            <div id="teamLength" class="hidden">
+                {{teamLength}}
+            </div>
+            {{#each teams as |currentteam index|}}
+            <h4>{{name}}</h4>
+            <div class="container">
+                <div class="row">
+                    {{#each currentteam.team}}
+                    {{#if subheader_before}}<h5>{{subheader_before}}</h5>{{/if}}
+                    <div id="modal-container-personcard">
+                        <div class="modal-background {{#if ../../loggedin}}modal-padding{{/if}}">
+                            <div class="modal fade" id="exampleModalLong"
+                                tabindex="-1" role="dialog"
+                                aria-labelledby="exampleModalLongTitle" aria-hidden="true"
+                            >
+                                <div class="modal-dialog" style="margin-top: {{#if longDesc}} {{ longDesc }} {{else}} 20vh {{/if}}" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <i class="fa fa-times" aria-hidden="true"></i>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="row">
+                                                <div class="col-md-5">
+                                                    <div data-tilt data-tilt-glare data-tilt-max-glare="0.8">
+                                                        <img class="image" src="{{pictureUrl}}">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-7">
+                                                    <h2 class="person-title" data-lastname="{{lastName}}" style="text-align: left">{{title}} {{firstName}} {{lastName}}</h2>
+                                                    <h5 class="person-desc" style="text-align: left">{{position}}</h5>
+                                                    <p style="text-align: left">{{{description}}}</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-					<div class="content
-						{{#ifvalue currentteam.style value="small"}} teamsmall col-lg-3 col-md-4 {{/ifvalue}}
-						{{#ifvalue currentteam.style value="standard"}} col-md-4 {{/ifvalue}}
-						col-sm-6 col-xs-12">
-						<div class="person-wrapper">
-							<div class="buttons">
-								<div id="openCard">
-									<div class="card h-100 person">
-										<img class="card-img-top circular" src="{{pictureUrl}}">
-										<div class="card-block">
-											<h4 class="person-title card-title" data-lastname="{{lastName}}">{{firstName}} {{lastName}}</h4>
-											<p class="person-desc card-text">{{position}}</p>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+                    <div class="content
+                        {{#ifvalue currentteam.style value="small"}} teamsmall col-lg-3 col-md-4 {{/ifvalue}}
+                        {{#ifvalue currentteam.style value="standard"}} col-md-4 {{/ifvalue}}
+                        col-sm-6 col-xs-12">
+                        <div class="person-wrapper">
+                            <div class="buttons">
+                                <div id="openCard">
+                                    <div class="card h-100 person">
+                                        <img class="card-img-top circular" src="{{pictureUrl}}">
+                                        <div class="card-block">
+                                            <h4 class="person-title card-title" data-lastname="{{lastName}}">{{firstName}} {{lastName}}</h4>
+                                            <p class="person-desc card-text">{{position}}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-					{{/each}}
-				</div>
-			</div>
-			{{/each}}
-		</section>
-	{{/content}}
+                    {{/each}}
+                </div>
+            </div>
+            {{/each}}
+        </section>
+    {{/content}}
 {{/embed}}
