--- a/theme/n21/style.scss
+++ b/theme/n21/style.scss
@@ -10,6 +10,7 @@ $colorGrey: rgba(232, 232, 232, 0.5);
 $colorLightGrey: rgba(0,0,0,0.1);
 $colorDarkerGrey: #555555;
 $colorWhite: #fff;
+$colorSemiTransparent: rgba(0,0,0,0.45);
 
 $logoBackground: url("../../images/logo/logo-wt.png") no-repeat center;
 
