--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -1,4 +1,4 @@
-{{#extend "lib/loggedout"}}
+{{#extend "lib/simple"}}
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/homepage/login.css"/>
@@ -10,23 +10,11 @@
     {{/content}}
 
     {{#content "page"}}
-        {{#embed "authentication/section"}}
-            {{#content "body"}}
-                <main class="container">
-                    <div class="row">
-                        <div class="col-md-6 offset-md-3">
+		{{> "authentication/forms/login"}}
 
-                            {{> "authentication/forms/login"}}
-
-                        </div>
-                    </div>
-                </main>
-
-                {{#embed "lib/components/modal-form" action="/pwrecovery/" method="post" class="pwrecovery-modal"}}
-                    {{#content "fields"}}
-                        {{> "authentication/forms/pwrecovery"}}
-                    {{/content}}
-                {{/embed}}
+        {{#embed "lib/components/modal-form" action="/pwrecovery/" method="post" class="pwrecovery-modal"}}
+            {{#content "fields"}}
+                {{> "authentication/forms/pwrecovery"}}
             {{/content}}
         {{/embed}}
     {{/content}}
