SC-1466 remove "chat" heading in teams

--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -65,8 +65,7 @@
             </section>
 
             {{#if rocketChatURL}}
-            <section class="section-chat" style="margin-top: 2rem">
-                <h3 class="h4">Chat</h3>
+            <section class="section-chat">
                 <div class="rocketchat">
                     <iframe src="{{rocketChatURL}}?layout=embedded" frameborder="0"></iframe>
                 </div>
