fixing css grid for safari and ff

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -69,12 +69,12 @@
 
         {{#embed "authentication/section" class="grix-2x2"}}
             {{#content "body"}}
-                    <img alt="" width="100%" height="100%" style="grid-area: a;  object-fit: contain" src="/images/login-left.png"/>
+                    <img alt="" width="200px" style="grid-area: a;  object-fit: contain;  margin: 0 auto" src="/images/login-left.png"/>
                     <div style="grid-area: b;">
                         <h2 class="section-title">Niedrigschwelliger Zugang zu digitalen Unterrichtsinhalten</h2>
                         <p>Eine moderne Lehr- und Lerninfrastruktur ist unabdingbar, um die digitale Transformation im Bildungssektor zum Erfolg zu führen und Kinder schon im Schulalter optimal auf das Leben in einer zunehmend digitalen Gesellschaft vorzubereiten.</p>
                     </div>
-                    <img alt="" width="100%" height="100%" style="grid-area: c; object-fit: contain" src="/images/login-right.png"/>
+                    <img alt="" width="150px" style="grid-area: c; object-fit: contain;  margin: 0 auto" src="/images/login-right.png"/>
                     <div style="grid-area: d; text-align: right;">
                         <h2 class="section-title">Ansatzpunkte der HPI Schul-Cloud</h2>
                         <p>Die Nutzung digitaler Medien und Lernmethoden stellt viele Schulen noch vor große Herausforderungen: veraltete Hard- sowie Software im abgeschlossenen Computerraum, fächverbindender Einsatz kaum möglich uvm.</p>
