--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -59,9 +59,7 @@
 					<label>
 						<input type="checkbox" name="discoverable" value="true" {{#if isDiscoverable}}checked{{/if}}>
 						Sichtbar für Teameinladungen
-						<p class="text-muted">In Teams können neue externe Mitglieder über einen Verzeichnisdienst
-							eingeladen werden. Dort werden alle Nutzer angezeigt, die für Teameinladungen sichtbar
-							sind.</p>
+						<p class="text-muted">Ist diese Funktion aktiviert, können Dich Lehrkräfte anderer Schulen, die Teamadministratoren sind, über einen {{theme.short_title}}-zentralen Verzeichnisdienst bequem in ein schulübergreifendes Team einladen. Dein Name ist deiner Schule zugeordnet und in der Verzeichnisstruktur unter Name des Bundeslandes > Name der Schule > Namen der Lehrkräfte aufrufbar.</p>
 						</p>
 					</label>
 				</div>
