--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -16,8 +16,7 @@
                 <label>
                     <input type="checkbox" name="disablestudentteamcreation" value="true" {{#inArray "disableStudentTeamCreation" school.features}}checked{{/inArray}}>
                     Schülern verbieten, Teams anzulegen
-                    <p class="text-muted">Durch das Aktivieren dieser Option bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind,
-                    das Anlegen von Teams durch Schüler an Ihrer Schule zu (de)aktiveren. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.</p>
+                    <p class="text-muted">Ist das Häkchen gesetzt, können nur Lehrkräfte und Administratoren Teams gründen. Schüler können dann selber keine Teams gründen, aber nachträglich durch Lehrkräfte zu Teamleitern und Teamadministratoren ernannt werden. Als weisungsberechtigter Administrator kannst du diese Funktion zentral für die gesamte Schule deaktivieren/aktiveren.</p>
                 </label>
             </div>
             <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
