Allow editing events only with correct permission set

--- a/views/calendar/card.hbs
+++ b/views/calendar/card.hbs
@@ -94,6 +94,8 @@ i.ml-auto {
       </span>
       <span class="card-description">{{event.description}}</span>
     </div>
+    {{#if canEdit}}
     <i style="cursor: pointer; font-size: 18px" class="ml-auto btn-edit-event fa fa-edit"></i>
+    {{/if}}
   </div>
 </div>
