--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -14,8 +14,12 @@
             <input type="hidden" name="_method" value="patch" />
             <div class="form-group" id="enableStudentsTeamsCreate">
                 <label>
-                    <input type="checkbox" name="disablestudentteamcreation" value="true" {{#inArray "disableStudentTeamCreation" school.features}}checked{{/inArray}}>
-                    Schülern verbieten, Teams anzulegen
+                    <input type="checkbox" name="enablestudentteamcreation" value="true"
+                    {{#inArray "disableStudentTeamCreation" school.features}}
+                    {{else}}
+                    checked
+                    {{/inArray}}>
+                    Schülern ist erlaubt Teams anzulegen
                     <p class="text-muted">Durch das Aktivieren dieser Option bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind,
                     das Anlegen von Teams durch Schüler an Ihrer Schule zu (de)aktiveren. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.</p>
                 </label>
