Use correct permissions

--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -14,7 +14,7 @@
             <div class="fullcalendar" id="calendar"></div>
         </div>
 
-        {{#userHasPermission "CALENDAR_EVENT_CREATE"}}
+        {{#userHasPermission "CALENDAR_CREATE"}}
         {{#embed "lib/components/modal-form" class="create-event-modal" action="/calendar/events/" userId=../userId}}
             {{#content "fields"}}
                 {{> "calendar/forms/form-create-event" addCourse="true" addTeam="true" collapseIdCourse="2" collapseIdTeam="3"}}
