--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -200,7 +200,7 @@
                                 {{/each}}
                             </div>
                             <div style="margin-top: .5rem">
-                                {{#inArray "NEWS_CREATE" permissions}}
+                                {{#inArray "CALENDAR_CREATE" permissions}}
                                     <button class="btn btn-add btn-primary btn-create-event pull-right">
                                         Termin anlegen
                                     </button>
