--- a/views/authentication/blog-card.hbs
+++ b/views/authentication/blog-card.hbs
@@ -7,7 +7,7 @@
         <small class="pub-date">{{article.pubDate}}</small>
     </h2>
     <p class="description">{{truncatePure (stripHTMLTags article.description) 200}}</p>
-    <a href="{{article.url}}" class="btn-read" target="_blank">
+    <a href="{{article.url}}" class="btn btn-primary btn-outline" target="_blank">
         Artikel öffnen <i class="fa  fa-angle-double-right" aria-hidden="true"></i>
     </a>
     </div>
