added partial protection hint, no styling yet, fix html error in admin dashboard

--- a/views/administration/administration.hbs
+++ b/views/administration/administration.hbs
@@ -8,4 +8,7 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
     {{/content}}
+    {{#content "page"}}
+        {{> "administration/partials/data_protection_hint"}}
+    {{/content}}
 {{/extend}}
