--- a/views/administration/courses.hbs
+++ b/views/administration/courses.hbs
@@ -8,7 +8,7 @@
         <script src="/scripts/spectrum/spectrum.js" type="text/javascript" defer></script>
         <script src="/scripts/spectrum/init.js" type="text/javascript" defer></script>
     {{/content}}
-    {{#content "page"}}
+    {{#content "page" mode="prepend"}}
         <div class="route-administration">
             <section class="section-school section-default">
                 <div class="container-fluid">
