--- a/views/administration/helpdesk.hbs
+++ b/views/administration/helpdesk.hbs
@@ -1,5 +1,5 @@
 {{#extend "administration/administration"}}
-    {{#content "page"}}
+    {{#content "page" mode="prepend"}}
         <div class="route-administration">
             <section class="section-school section-default">
                 <div class="container-fluid">
