--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -7,7 +7,7 @@
 <script src="/scripts/administration/school.js" type="text/javascript" defer></script>
 {{/content}}
 
-{{#content "page"}}
+{{#content "page" mode="prepend"}}
 <div class="route-administration">
     <section class="section-school section-default">
         <div class="container-fluid">
