--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="/styles/lib/filter/filter.css"/>
         <link rel="stylesheet" href="/styles/administration/users.css"/>
     {{/content}}
-    {{#content "page"}}
+    {{#content "page" mode="prepend"}}
         <div class="route-administration">
             <section class="section-teachers section-default">
                 <div><feathers-filter id="filter"
