--- a/views/administration/classes.hbs
+++ b/views/administration/classes.hbs
@@ -2,7 +2,7 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/lib/filter/filter.css"/>
     {{/content}}
-    {{#content "page"}}
+    {{#content "page" mode="prepend"}}
         <div class="route-administration">
             <section class="section-school section-default">
                 <div><feathers-filter id="filter"
