--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -149,9 +149,10 @@ aside.nav-sidebar {
         }
     }
     @include media-breakpoint-down(xs) {
-        position: absolute;
+		position: absolute;
         width: 100%;
-        height: 100vh;
+		height: 100vh;
+		padding-top: 50px;
         overflow: auto;
         background: $colorWhite;
         box-shadow: 0 2px 5px rgba(0,0,0,.26);
@@ -280,9 +281,6 @@ aside.nav-sidebar {
         z-index: 9999;
         transition: transform .3s linear;
         transform: rotate(90deg);
-        .fa{
-            color: #fff;
-        }
     }
     @include media-breakpoint-down(xs) {
         display: block;
