change paragraph to text-muted

--- a/views/authentication/forms/demo-login.hbs
+++ b/views/authentication/forms/demo-login.hbs
@@ -17,7 +17,7 @@
             <input type="submit" id="demologin" class="btn btn-outline btn-primary" value="als Lehrer*In einloggen" />
         </form>
     </div>
-    <span class="hint">
+    <span class="hint text-muted">
         Wir empfehlen die Nutzung einer aktuellen Version der Browser Chrome, Firefox, Edge oder Safari.
     </span>
 </section>
